<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.etendance.CheckInActivity" >
    
    <Button android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginTop="10dp" />
        
    <Button android:id="@+id/qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/qr_scan"
        android:textSize="25sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="35sp"
        android:layout_marginTop="35dp" />
    
    <EditText android:id="@+id/pin_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/pin_hint"
        android:textSize="25sp" />
    
    <Button android:id="@+id/pin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_submit"
        android:layout_gravity="center"
        android:textSize="25sp" />
    
</LinearLayout>
