<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.etendance.AttendanceViewActivity" >
    
    
    <Button android:id="@+id/log_out"
        android:text="@string/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />
    
    <Button android:id="@+id/back"
	    android:text="@string/back"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true" />
    
    <TextView android:id="@+id/class_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_placeholder"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_below="@id/back" />"
    
    <ListView android:id="@+id/absence_list"
        android:layout_below="@id/class_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </ListView>
    
</RelativeLayout>