<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.etendance.PinViewActivity" >
    
    
    <Button android:id="@+id/log_out"
        android:text="@string/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />
    
    <Button android:id="@+id/back"
	    android:text="@string/back"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true" />
    
    <TextView android:id="@+id/selected_class_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_placeholder"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:layout_below="@id/back" />
    
    <TextView android:id="@+id/selected_class_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_placeholder"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textIsSelectable="true"
        android:layout_below="@id/selected_class_name" />"
    

</RelativeLayout>
